<resources>
    <string name="app_name">鲜活</string>
    <string name="version">version - %1$d</string>
    <string name="you_have_praise">您已经点过赞啦！</string>
    <string name="get_error">获取失败</string>
    <string name="love">曾经沧海难为水\n除却巫山不是云</string>
    <string name="skip">跳过</string>
    <string name="fetchUserInfoSuccess">同步用户信息成功</string>
    <string name="fetchUserInfoFailure">同步用户信息失败</string>
    <string name="inputTel">请输入手机号</string>
    <string name="inputPass">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgetPass">忘记密码</string>
    <string name="register">注册</string>
    <string name="regOrFor">注册Or忘记密码</string>
    <string name="please_input_tel">请输入您手机号</string>
    <string name="ok">确定</string>
    <string name="re_get_code">重新获取</string>
    <string name="tel_form_not_val">电话格式不正确</string>
    <string name="code_form_not_val">验证码格式不正确</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="check">验证</string>
    <string name="user_not_reg">该用户尚未注册</string>
    <string name="user_reg">该用户已经注册，请登录</string>
    <string name="please_input_content">请填写内容</string>
    <string name="create_pass">创建密码</string>
    <string name="revise_pass">修改密码</string>
    <string name="tests">页面测试</string>
    <string name="pass1">请输入密码</string>
    <string name="pass2">请再次输入密码</string>
    <string name="pass_not_equal">两次密码不同，请重新输入</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="modify_pass_success">修改密码成功</string>
    <string name="modify_user_info_success">修改信息成功</string>
    <string name="modify_user_info_failure">修改信息失败</string>
    <string name="send_post_success">发布成功！</string>
    <string name="send_post_failure">发布失败！</string>
    <string name="get_content_failure">获取内容失败</string>
    <string name="get_content_success">获取内容成功</string>
    <string name="get_content_empty">没有更多数据</string>
    <string name="send_comment_success">发布评论成功</string>
    <string name="send_comment_failure">发布评论失败</string>
    <string name="praise_success">点赞成功</string>
    <string name="praise_cancel">取消点赞</string>
    <string name="work_is_finish">恭喜你，作业都做完了！</string>
    <string name="pass_6">密码最低6位数</string>
    <string name="main">首页</string>
    <string name="news">消息</string>
    <string name="my_main">我的首页</string>
    <string name="my_news">我的消息</string>
    <string name="my_say">我的个性签名.........................................................</string>
    <string name="my_lv">LV5</string>
    <string name="my_focus">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_moments">我的朋友圈</string>
    <string name="login_out">注销</string>
    <string name="login_out_tip">确定退出当前账户？</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="my_menu_user_title">我的</string>
    <string-array name="my_list_info">
        <item>我的账号</item>
        <item>我的昵称</item>
        <item>我的性别</item>
        <item>我的个性签名</item>
        <item>我的学号</item>
        <item>我的网络教学平台密码</item>
        <item>我的教务管理系统密码</item>
        <item>我的经验</item>
        <item>修改密码</item>
    </string-array>
    <string name="my_coll">我的收藏</string>
    <string-array name="my_menu_user">
        <item>个人空间</item>
        <item>我的收藏</item>
    </string-array>
    <string name="my_menu_jwgl_title">教务管理系统</string>
    <string-array name="my_menu_jwgl">
        <item>个人信息</item>
        <item>我的成绩</item>
        <item>我的课表</item>
    </string-array>
    <string name="info">个人信息</string>
    <string name="score">我的成绩</string>
    <string name="ttb">我的课表</string>
    <string name="work">我的作业</string>
    <string name="talk_with_me">和我说点什么吧…</string>
    <string name="robot">智能小华</string>
    <string name="my_menu_eol_title">网络教学平台</string>
    <string name="every_music">每日一曲</string>
    <string name="every_article">每日一文</string>
    <string-array name="my_menu_eol">
        <item>我的信息</item>
        <item>我的作业</item>
    </string-array>
    <string name="my_menu_one_day_title">每日推荐</string>
    <string-array name="my_menu_one">
        <item>每日一文</item>
        <item>每日一曲</item>
    </string-array>
    <string name="my_menu_tools_title">小助手</string>
    <string-array name="my_menu_tool">
        <item>智能小华</item>
        <item>电脑义务维修</item>
        <item>水卡充值</item>
        <item>电影推荐</item>
    </string-array>
    <string name="my_menu_seeting_title">设置</string>
    <string-array name="my_menu_setting">
        <item>设置</item>
        <item>注销</item>
    </string-array>
    <string name="User">User</string>
    <string name="hello_blank_fragment1">Hello blank fragment11111</string>
    <string name="hello_blank_fragment2">Hello blank fragment22222</string>
    <string name="lyric">不敢回看 左顾右盼不自然的暗自喜欢 偷偷搭讪总没完地坐立难安 试探说晚安 多空泛又心酸
        低头呢喃 对你的偏爱太过于明目张胆 在原地打转的小丑伤心不断 空空留遗憾 多难堪又为难 释然 慵懒 尽欢 </string>
    <string name="lv">LV5</string>
    <string name="types">#灌水吐槽#</string>
    <string name="say">添加评论…</string>
    <string name="look">浏览</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功！</string>
    <string name="please_input_school_id">请填写学号</string>
    <string name="please_input_jwgl">请填写教务管理系统密码</string>
    <string name="please_input_eol">请填写网络教学平台密码</string>
    <string name="received_comm">收到的评论</string>
    <string name="send_comm">发出的评论</string>
    <string name="received_praise">收到的赞</string>
    <string name="send_praise">发出的赞</string>
    <string name="sure_cancel_focus">您确定不再关注该用户？</string>
    <string name="sure_cancel_onfocus">您确定移除该粉丝？</string>
    <string name="text">你想说点什么</string>
    <string name="choose_topic">选择话题</string>
    <string name="cancel">取消</string>
    <string-array name="topics">
        <item>个人吐槽</item>
        <item>学业求助</item>
        <item>物品丢失</item>
        <item>二手市场</item>
        <item>生活分享</item>
        <item>贴吧吐槽</item>
        <item>成师轶事</item>
        <item>新闻公告</item>
    </string-array>
    <string name="topic">选个地点来输入吧</string>
    <string name="is_progress">正在加载</string>
    <string name="title_activity_settings">设置</string>
    <string name="update_database">更新数据中…</string>
    <string name="pref_header_general">个人信息及账号设置</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">同步</string>
    <string name="pref_header_check_update">检查新版本</string>
    <string name="pref_header_clear_data">清除缓存</string>
    <string name="pref_header_app">关于我们</string>
    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 秒</item>
        <item>1 分钟</item>
        <item>3 分钟</item>
        <item>10 分钟</item>
        <item>1 小时</item>
        <item>永不同步</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>600</item>
        <item>3600</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">系统同步设置</string>
    <string name="pref_header_notifications">消息提醒设置</string>
    <string name="pref_header_menu">首页菜单显示</string>
    <string name="pref_title_new_message_notifications">新消息</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">响铃</string>
    <string name="pref_title_vibrate">震动</string>
    <string name="pref_title_jwgl">教务管理系统</string>
    <string name="pref_title_eol">网络教学平台</string>
    <string name="pref_title_one_day">每日推荐</string>
    <string name="pref_title_tools">小助手</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="clear_cache_failure">清除缓存失败</string>
    <string name="check_version_is_newer">您已安装最新版本！</string>
    <string name="check_update">正在检查版本信息</string>
    <string name="red_point">小红点</string>
    <string name="info_index">我的信息</string>
    <string name="coll">收藏</string>
    <string name="dynamic">动态</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brvah_load_failed">加载失败</string>
    <string name="brvah_loading">正在加载</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="title_content">正文</string>
    <string name="post">帖子</string>
    <string name="comment">评论</string>
    <string name="praise_post">赞了您的帖子</string>
    <string name="menu_collection">收藏</string>
    <string name="menu_collection_cancel">取消收藏</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_cancel">取消收藏成功</string>
    <string name="menu_praise">点赞</string>
    <string name="focus_success">关注成功</string>
    <string name="menu_praise_cancel">取消点赞</string>
    <string name="menu_focus">关注</string>
    <string name="menu_focus_cancel">取消关注</string>
    <string name="focus_cancel">取消关注成功</string>
    <string name="content_is_empty">这里没有任何内容…</string>
    <string name="title_activity_user_room">UserRoomActivity</string>
    <string name="action_settings">Settings</string>
    <string name="my_info">类别</string>
    <string name="my_info_detail">具体信息</string>
    <string name="choose_year">学年</string>
    <string name="choose_month">学期</string>
    <string-array name="month">
        <item>第一学期</item>
        <item>第二学期</item>
    </string-array>
    <string name="detail">详细</string>
    <string name="score_name">课程名称</string>
    <string name="score_term">学期</string>
    <string name="score_kechengxingzhi">课程性质</string>
    <string name="score_xueyuan">学院名称</string>
    <string name="work_jiezhiriqi">截止日期</string>
    <string name="score_bukaochengji">补考成绩</string>
    <string name="work_title">作业标题</string>
    <string name="score_chengji">成绩</string>
    <string name="score_chongxiubiaoji">重修标记</string>
    <string name="score_jidian">绩点</string>
    <string name="score_kechengdaima">课程代码</string>
    <string name="score_kechengguishu">课程归属</string>
    <string name="score_xuefen">学分</string>
    <string name="score_cxchengji">重修成绩</string>
    <string name="score_fuxiubiaoji">辅修标记</string>
    <string name="score_xuenian">学年</string>
    <string name="yi">一</string>
    <string name="er">二</string>
    <string name="san">三</string>
    <string name="si">四</string>
    <string name="wu">五</string>
    <string name="liu">六</string>
    <string name="ttb_is_null">您这学期好像没有课程！</string>
    <string name="confirm_to_quit">再次点击退出程序</string>
    <string name="qingzhi">jk47iUs7l-6Nza-HQoPNdiyY6qGkjfQX</string>
    <string name="first_message">你好，我就是高中时期那个随时随地给外国人写信的靓仔李华，初次见面，请多关照！</string>
    <string name="listen">倾听</string>
    <string name="click_me_to_modify_pass">点我修改密码</string>
    <string name="message_notification_title_template">Message: %1$s</string>
</resources>