<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegOrForActivity">

    <include layout="@layout/base_toolbar" />

    <TextView
        android:id="@+id/rf_tv_tip"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/please_input_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/rf_tv_tipIsSend"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="请输入我们发送到110的验证码" />

    <EditText
        android:id="@+id/rf_et_input"
        android:textSize="14sp"
        android:hint="@string/inputTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:inputType="number" />


    <TextView
        android:visibility="gone"
        android:id="@+id/rf_tv_smsTip"
        android:gravity="center"
        android:text="@string/re_get_code"
        android:textColor="@color/colorBack"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/rf_bt_ok"
        android:textColor="@color/colorBack"
        android:text="@string/ok"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/buttonshape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>